test/netlist/error/unused-block.bop
A(a) = b
where
  b = not(a);
end where;

Main(a) = b
where
  b = not(a);
end where;
